add icon / button for refresh states; fix #211

--- a/base/plugins/iscore-plugin-scenario/Scenario/resources/ScenarioResources.qrc
+++ b/base/plugins/iscore-plugin-scenario/Scenario/resources/ScenarioResources.qrc
@@ -56,6 +56,8 @@
         <file>icons/sequence_on.png</file>
         <file>icons/snapshot_off.png</file>
         <file>icons/snapshot_on.png</file>
+        <file>icons/refresh_off.png</file>
+        <file>icons/refresh_on.png</file>
         <file>icons/stop_off.png</file>
         <file>icons/stop_on.png</file>
         <file>icons/reinitialize_off.png</file>
