--- a/base/remote/qml.qrc
+++ b/base/remote/qml.qrc
@@ -8,14 +8,22 @@
         <file>qml/NodeTree.qml</file>
         <file>qml/CentralAreaForm.ui.qml</file>
         <file>qml/WidgetListForm.ui.qml</file>
-        <file>qml/widgets/HSliderForm.ui.qml</file>
-        <file>qml/widgets/TextLabel.ui.qml</file>
-        <file>qml/widgets/UILineEdit.qml</file>
-        <file>qml/widgets/VSlider.ui.qml</file>
-        <file>qml/widgets/UIButton.ui.qml</file>
-        <file>qml/widgets/HSlider.qml</file>
-        <file>qml/widgets/UILineEditForm.ui.qml</file>
-        <file>qml/widgets/UICheckBox.qml</file>
-        <file>qml/widgets/UICheckBoxForm.ui.qml</file>
+        <file>qml/widgets/static/StaticButton.qml</file>
+        <file>qml/widgets/static/StaticLabel.qml</file>
+        <file>qml/widgets/static/StaticLineEdit.qml</file>
+        <file>qml/widgets/static/StaticSlider.qml</file>
+        <file>qml/widgets/static/StaticSwitch.qml</file>
+        <file>qml/widgets/dynamic/DynamicButton.qml</file>
+        <file>qml/widgets/dynamic/DynamicButtonForm.ui.qml</file>
+        <file>qml/widgets/dynamic/DynamicHSlider.qml</file>
+        <file>qml/widgets/dynamic/DynamicHSliderForm.ui.qml</file>
+        <file>qml/widgets/dynamic/DynamicLabel.ui.qml</file>
+        <file>qml/widgets/dynamic/DynamicLineEdit.qml</file>
+        <file>qml/widgets/dynamic/DynamicLineEditForm.ui.qml</file>
+        <file>qml/widgets/dynamic/DynamicSwitch.qml</file>
+        <file>qml/widgets/dynamic/DynamicSwitchForm.ui.qml</file>
+        <file>qml/widgets/dynamic/DynamicVSlider.qml</file>
+        <file>qml/widgets/dynamic/DynamicVSliderForm.ui.qml</file>
+        <file>qml/widgets/dynamic/AddressDrop.qml</file>
     </qresource>
 </RCC>
