--- a/base/remote/qml.qrc
+++ b/base/remote/qml.qrc
@@ -17,7 +17,6 @@
         <file>qml/widgets/dynamic/DynamicButtonForm.ui.qml</file>
         <file>qml/widgets/dynamic/DynamicHSlider.qml</file>
         <file>qml/widgets/dynamic/DynamicHSliderForm.ui.qml</file>
-        <file>qml/widgets/dynamic/DynamicLabel.ui.qml</file>
         <file>qml/widgets/dynamic/DynamicLineEdit.qml</file>
         <file>qml/widgets/dynamic/DynamicLineEditForm.ui.qml</file>
         <file>qml/widgets/dynamic/DynamicSwitch.qml</file>
@@ -25,5 +24,8 @@
         <file>qml/widgets/dynamic/DynamicVSlider.qml</file>
         <file>qml/widgets/dynamic/DynamicVSliderForm.ui.qml</file>
         <file>qml/widgets/dynamic/AddressDrop.qml</file>
+        <file>qml/widgets/dynamic/AddressLabel.qml</file>
+        <file>qml/widgets/dynamic/DynamicLabel.qml</file>
+        <file>qml/widgets/dynamic/DynamicLabelForm.ui.qml</file>
     </qresource>
 </RCC>
