--- a/base/lib/resources/qdarkstyle.qss
+++ b/base/lib/resources/qdarkstyle.qss
@@ -263,7 +263,6 @@ QMenu::icon
 QMenu::item
 {
     padding: 5px 30px 5px 30px;
-    /*margin-left: 5px;*/
     border: 1px solid transparent; /* reserve space for selection border */
 }
 
@@ -337,7 +336,7 @@ QAbstractItemView
     color: silver;
     border: 1px solid #3A3939;
     border-radius: 2px;
-    padding: 1px;
+    padding: 0;
 }
 
 QWidget:focus, QMenuBar:focus
@@ -358,7 +357,7 @@ QLineEdit
     border-style: solid;
     border: 1px solid #1A2024;
     border-radius: 2px;
-    padding: 0px;
+    padding: 0;
     margin-left: 2px;
     color: silver;
 }
@@ -646,9 +645,12 @@ QToolBar::separator:horizontal {
     image: url(:/qss_icons/rc/Hsepartoolbar.png);
 }
 QToolBar::separator:vertical {
-    image: url(:/qss_icons/rc/Vsepartoolbars.png);
+    image: url(:/qss_icons/rc/Vsepartoolbar.png);
 }
 
+QToolButton#qt_toolbar_ext_button {
+    background: #58595a
+}
 QToolButton
 {
     color: silver;
@@ -848,6 +850,11 @@ QTabWidget::pane {
     border: 1px solid #444;
     border-radius: 3px;
     padding: 3px;
+    margin: 0px;
+}
+
+QTabWidget::tab-bar {
+    left: 5px; /* move to the right by 5px */
 }
 
 QTabBar
@@ -897,6 +904,9 @@ QTabBar::tab:top:!selected
     border-bottom: 1px transparent #4A4949;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;*/
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+
 }
 
 QTabBar::tab:top:!selected:hover {
@@ -921,8 +931,9 @@ QTabBar::tab:bottom:!selected
     background-color: #3D3D3D;
 /*    border: 1px transparent #4A4949;
     border-top: 1px transparent #4A4949;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;*/
+    */
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
 
 QTabBar::tab:bottom:!selected:hover {
@@ -938,8 +949,8 @@ QTabBar::tab:left {
     background-color: #666666;
     padding: 5px;
     margin: 3px;
-/*    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;*/
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
 
 QTabBar::tab:left:!selected
@@ -948,8 +959,9 @@ QTabBar::tab:left:!selected
     background-color: #3D3D3D;
 /*    border: 1px transparent #4A4949;
     border-right: 1px transparent #4A4949;
+    */
     border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;*/
+    border-bottom-right-radius: 0px;
 }
 
 QTabBar::tab:left:!selected:hover {
@@ -966,8 +978,8 @@ QTabBar::tab:right {
     background-color: #666666;
     padding: 5px;
     margin: 3px;
-/*    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;*/
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
 }
 
 QTabBar::tab:right:!selected
@@ -975,9 +987,9 @@ QTabBar::tab:right:!selected
     color: #b1b1b1;
     background-color: #3D3D3D;
 /*    border: 1px transparent #4A4949;
-    border-right: 1px transparent #4A4949;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;*/
+    border-right: 1px transparent #4A4949; */
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
 }
 
 QTabBar::tab:right:!selected:hover {
@@ -1100,13 +1112,13 @@ QTreeView::branch:open:has-children:has-siblings:hover  {
     image: url(:/qss_icons/rc/branch_open-on.png);
     }
 
-QListView::item:!selected:hover, QListView::item:!selected:hover, QTreeView::item:!selected:hover  {
-    background: rgba(0, 0, 0, 0);
+QListView::item:!selected:hover, QTreeView::item:!selected:hover  {
+    background: rgba(167,218,245, 0.3);
     outline: 0;
     color: #FFFFFF
 }
 
-QListView::item:selected:hover, QListView::item:selected:hover, QTreeView::item:selected:hover  {
+QListView::item:selected:hover, QTreeView::item:selected:hover  {
 /*    background: #3d8ec9;
     color: #FFFFFF;*/
 }
