object inspector seems to be ok

--- a/base/plugins/iscore-plugin-scenario/Scenario/resources/ScenarioResources.qrc
+++ b/base/plugins/iscore-plugin-scenario/Scenario/resources/ScenarioResources.qrc
@@ -10,5 +10,6 @@
         <file>images/cond.svg</file>
         <file>images/constraint.svg</file>
         <file>images/process.svg</file>
+        <file>images/state-empty.svg</file>
     </qresource>
 </RCC>
