--- a/base/plugins/iscore-plugin-scenario/Scenario/resources/ScenarioResources.qrc
+++ b/base/plugins/iscore-plugin-scenario/Scenario/resources/ScenarioResources.qrc
@@ -8,7 +8,7 @@
         <file>IEEESkin.json</file>
         <file>images/state.svg</file>
         <file>images/cond.svg</file>
-        <file>images/constraint.svg</file>
+        <file>images/interval.svg</file>
         <file>images/process.svg</file>
         <file>images/state-empty.svg</file>
         <file>images/event.svg</file>
