--- a/base/lib/resources/score.qrc
+++ b/base/lib/resources/score.qrc
@@ -2,7 +2,7 @@
     <qresource prefix="/">
         <file>Ubuntu-R.ttf</file>
         <file>APCCourierBold.otf</file>
-        <file>i-score.png</file>
+        <file>score.png</file>
         <file>dict.txt</file>
         <file>icons/next_off.png</file>
         <file>icons/next_on.png</file>
