--- a/base/lib/resources/score.qrc
+++ b/base/lib/resources/score.qrc
@@ -1,5 +1,9 @@
 <RCC>
     <qresource prefix="/">
+        <file>about/about_background.png</file>
+        <file>about/about_background@2x.png</file>
+        <file>Catamaran-Regular.ttf</file>
+        <file>Montserrat-Regular.ttf</file>
         <file>Ubuntu-R.ttf</file>
         <file>APCCourierBold.otf</file>
         <file>score.png</file>
