--- a/base/lib/resources/score.qrc
+++ b/base/lib/resources/score.qrc
@@ -7,7 +7,7 @@
         <file>Montserrat-Regular.ttf</file>
         <file>Ubuntu-R.ttf</file>
         <file>APCCourierBold.otf</file>
-        <file>score.png</file>
+        <file>ossia-score.png</file>
         <file>dict.txt</file>
         <file>icons/next_off.png</file>
         <file>icons/next_on.png</file>
