--- a/base/lib/resources/score.qrc
+++ b/base/lib/resources/score.qrc
@@ -6,6 +6,8 @@
         <file>Catamaran-Regular.ttf</file>
         <file>Montserrat-Regular.ttf</file>
         <file>Ubuntu-R.ttf</file>
+        <file>Ubuntu-B.ttf</file>
+        <file>Ubuntu-L.ttf</file>
         <file>APCCourierBold.otf</file>
         <file>score.png</file>
         <file>dict.txt</file>
