--- a/base/lib/resources/score.qrc
+++ b/base/lib/resources/score.qrc
@@ -245,6 +245,8 @@
         <file>icons/engine_on@2x.png</file>
         <file>icons/refresh_off@2x.png</file>
         <file>icons/refresh_on@2x.png</file>
+        <file>icons/search.png</file>
+        <file>icons/search@2x.png</file>
     </qresource>
     <qresource prefix="/qss_icons">
         <file>rc/up_arrow_disabled.png</file>
