--- a/base/lib/resources/score.qrc
+++ b/base/lib/resources/score.qrc
@@ -89,6 +89,9 @@
         <file>icons/play_off@2x.png</file>
         <file>icons/play_on.png</file>
         <file>icons/play_on@2x.png</file>
+        <file>icons/prev_disabled.png</file>
+        <file>icons/prev_disabled@2x.png</file>
+        <file>icons/prev_on@2x.png</file>
         <file>icons/prev_off@2x.png</file>
         <file>icons/prev_on@2x.png</file>
         <file>icons/process_off.png</file>
