--- a/base/lib/resources/qsimpledarkstyle.qss
+++ b/base/lib/resources/qsimpledarkstyle.qss
@@ -45,8 +45,8 @@ QWidget
 {
     color: silver;
     background-color: #1A2024;
-    selection-background-color: #64788a;
-    selection-color: black;
+    selection-background-color: #27435e;
+    selection-color: #ffffff;
     background-clip: border;
     border-image: none;
     border: none;
@@ -72,7 +72,8 @@ QWidget:item:hover
 
 QWidget:item:selected
 {
-    background-color: #64788a;
+    background-color: #27435e;
+    color: #ffffff;
 }
 
 QCheckBox
@@ -108,7 +109,7 @@ QCheckBox::indicator:unchecked:hover,
 QGroupBox::indicator:unchecked,
 QGroupBox::indicator:unchecked:hover
 {
-    image: url(:/qss_icons/rc/checkbox_unchecked.png);
+    image: url(:/icons/checkbox_unchecked.png);
 }
 
 QCheckBox::indicator:unchecked:focus,
@@ -117,7 +118,7 @@ QGroupBox::indicator:unchecked:focus,
 QGroupBox::indicator:unchecked:pressed
 {
   border: none;
-    image: url(:/qss_icons/rc/checkbox_unchecked_focus.png);
+    image: url(:/icons/checkbox_unchecked_focus.png);
 }
 
 QCheckBox::indicator:checked,
@@ -125,7 +126,7 @@ QCheckBox::indicator:checked:hover,
 QGroupBox::indicator:checked,
 QGroupBox::indicator:checked:hover
 {
-    image: url(:/qss_icons/rc/checkbox_checked.png);
+    image: url(:/icons/checkbox_checked.png);
 }
 
 QCheckBox::indicator:checked:focus,
@@ -134,7 +135,7 @@ QGroupBox::indicator:checked:focus,
 QGroupBox::indicator:checked:pressed
 {
   border: none;
-    image: url(:/qss_icons/rc/checkbox_checked_focus.png);
+    image: url(:/icons/checkbox_checked_focus.png);
 }
 
 QCheckBox::indicator:indeterminate,
@@ -156,13 +157,13 @@ QGroupBox::indicator:indeterminate:focus
 QCheckBox::indicator:checked:disabled,
 QGroupBox::indicator:checked:disabled
 {
-    image: url(:/qss_icons/rc/checkbox_checked_disabled.png);
+    image: url(:/icons/checkbox_checked_disabled.png);
 }
 
 QCheckBox::indicator:unchecked:disabled,
 QGroupBox::indicator:unchecked:disabled
 {
-    image: url(:/qss_icons/rc/checkbox_unchecked_disabled.png);
+    image: url(:/icons/checkbox_unchecked_disabled.png);
 }
 
 
@@ -186,7 +187,7 @@ QRadioButton::indicator
 
 QRadioButton::indicator:unchecked
 {
-    image: url(:/qss_icons/rc/radio_unchecked.png);
+    image: url(:/icons/radio_unchecked.png);
 }
 
 
@@ -196,14 +197,14 @@ QRadioButton::indicator:unchecked:pressed
 {
     border: none;
     outline: none;
-    image: url(:/qss_icons/rc/radio_unchecked_focus.png);
+    image: url(:/icons/radio_unchecked_focus.png);
 }
 
 QRadioButton::indicator:checked
 {
     border: none;
     outline: none;
-    image: url(:/qss_icons/rc/radio_checked.png);
+    image: url(:/icons/radio_checked.png);
 }
 
 QRadioButton::indicator:checked:hover,
@@ -212,18 +213,18 @@ QRadioButton::indicator:checked:pressed
 {
     border: none;
     outline: none;
-    image: url(:/qss_icons/rc/radio_checked_focus.png);
+    image: url(:/icons/radio_checked_focus.png);
 }
 
 QRadioButton::indicator:checked:disabled
 {
     outline: none;
-    image: url(:/qss_icons/rc/radio_checked_disabled.png);
+    image: url(:/icons/radio_checked_disabled.png);
 }
 
 QRadioButton::indicator:unchecked:disabled
 {
-    image: url(:/qss_icons/rc/radio_unchecked_disabled.png);
+    image: url(:/icons/radio_unchecked_disabled.png);
 }
 
 QMenuBar
@@ -1096,23 +1097,25 @@ QTreeView::branch:!has-children:!has-siblings:adjoins-item {
 
 QTreeView::branch:has-children:!has-siblings:closed,
 QTreeView::branch:closed:has-children:has-siblings {
-    image: url(:/qss_icons/rc/branch_closed.png);
+image: url(:/qss_icons/rc/branch_closed.png);
 }
 
 QTreeView::branch:open:has-children:!has-siblings,
 QTreeView::branch:open:has-children:has-siblings  {
-    image: url(:/qss_icons/rc/branch_open.png);
+image: url(:/qss_icons/rc/branch_open.png);
 }
 
 QTreeView::branch:has-children:!has-siblings:closed:hover,
+QTreeView::branch:has-children:!has-siblings:closed:selected,
 QTreeView::branch:closed:has-children:has-siblings:hover {
-    image: url(:/qss_icons/rc/branch_closed-on.png);
-    }
+image: url(:/qss_icons/rc/branch_closed-on.png);
+}
 
 QTreeView::branch:open:has-children:!has-siblings:hover,
+QTreeView::branch:open:has-children:!has-siblings:selected,
 QTreeView::branch:open:has-children:has-siblings:hover  {
-    image: url(:/qss_icons/rc/branch_open-on.png);
-    }
+image: url(:/qss_icons/rc/branch_open-on.png);
+}
 
 QListView::item:!selected:hover, QTreeView::item:!selected:hover  {
     background: #416681;/*rgba(115, 193, 19, 0.3);*/
@@ -1415,11 +1418,11 @@ QListView::item:pressed {
 }
 
 QListView:focus{
-    border: 1px solid  #64788a;
+    border: 1px solid  #27435e;
 }
 
 QListView::item:!selected:hover{
-    background-color: #64788a;
+    background-color: #27435e;
     color: #ffffff;
 }
 
@@ -1435,11 +1438,11 @@ QPushButton:pressed, QPushButton:pressed:!active, QPushButton:pressed:active, QP
 
 
 QComboBox::item:selected{
-    background-color: #64788a;
+    background-color: #27435e;
     color: #ffffff;
 }
 QTreeView:focus, QAbstractItemView:focus{
-    border: 1px solid #64788a;
+    border: 1px solid #27435e;
 }
 
 QPushButton#buttonWithoutArrow::menu-indicator{
@@ -1463,7 +1466,7 @@ QPushButton#buttonWithoutArrow QIcon{
     padding: 0px;
 }
 QMenu::item:selected{
-    background-color:  #64788a;
+    background-color:  #27435e;
     color: #ffffff;
 }
 QTabWidget QTabBar{
